[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/HitEffect.png" type="Texture" id=1]
[ext_resource path="res://Effects/HitEffect.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Animate",
"speed": 15.0
} ]

[node name="HitEffect" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Animate"

[node name="Duration" type="Timer" parent="."]

[connection signal="isOver" from="." to="." method="_on_HitEffect_isOver"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
